--- a/train-reservation.properties
+++ b/train-reservation.properties
@@ -1,2 +1,5 @@
-
+test.property=My train-reservation value
 server.port=7602
+
+#allow for RefreshScope
+management.endpoints.web.exposure.include=*
